--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -156,6 +156,10 @@ header .userpic {
 	width: 30px;
 	height: 30px;
 }
+.profile-pic-small {
+	width: 25px;
+	height: 25px;
+}
 #profile-pic{
 	width: 50px;
 	height: 50px;
