--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -367,17 +367,24 @@ button.close:hover {
 #galleryModal .modal-dialog {
 	width: 1000px;
 	max-width: 1000px;
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 #galleryModal .gallery-items{
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: repeat(5, 1fr);
 	grid-gap: 1em;
 	justify-items: center;
+	overflow-y: scroll;
+	min-height: 300px;
+	max-height: 500px;
 }
-#galleryModal .gallery-items .gallery-item-wrapper{
-	width:230px;
-}
-#galleryModal .gallery-items .gallery-item-wrapper.active{
+
+#galleryModal .gallery-items .gallery-item-wrapper img.active{
 	background-color: #559139;
 }
 
