--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -105,7 +105,7 @@ a:hover {
 	margin-top: 10px;
 }
 
-#dashboard-wrapper textarea, #dashboard-wrapper .profile {
+#dashboard-wrapper textarea, #dashboard-wrapper .profile, #errorsModal textarea {
 	width: 100%;
 	resize: none;
 	background: rgba(51, 51, 54, .3) !important;
@@ -367,6 +367,7 @@ button.close:hover {
 #galleryModal .modal-dialog {
 	width: 1000px;
 	max-width: 1000px;
+	border:1px solid grey;
 	-webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
      -khtml-user-select: none; /* Konqueror HTML */
