--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -21,8 +21,8 @@ body {
 	margin-top: -30px !important;
 }
 
-#login-wrapper .row {
-	height: 100vh;
+.login-wrapper-container{
+	margin-top:200px;
 }
 
 .login h1 {
