improve modals. add errors collector. need to check everything

--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -394,7 +394,7 @@ button.close:hover {
 }
 
 /* Errors */
-#errorsModal .modal-dialog {
+[data-role="errorsModal"] .modal-dialog {
 	max-width: 800px;
 	width: 800px;
 }
